services/foundry-vtt/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundry-vtt
spec:
  selector:
    app.kubernetes.io/instance: foundry-vtt
    app.kubernetes.io/name: foundry-vtt
  ports:
    - name: web
      port: 80
      targetPort: web
