services/foundry-vtt/base/resources/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundry-vtt-external
spec:
  parentRefs:
    - name: traefik-external
      namespace: traefik
  # hostnames set by instance patch
  hostnames: []
  rules:
    - matches:
        # Admin login
        - method: POST
          path:
            type: Exact
            value: /auth
        # Player login
        - method: POST
          path:
            type: Exact
            value: /join
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: foundry-vtt-auth-ratelimit
      backendRefs:
      - name: foundry-vtt
        port: 80
    - backendRefs:
      - name: foundry-vtt
        port: 80
