services/foundry-vtt/base/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundry-vtt
spec:
  parentRefs:
    - name: traefik-intranet
      namespace: traefik
  # Configured in app patches
  hostnames: []
  rules:
    # configured in app patches since nameSuffix doesn't change backendRefs name
    - backendRefs: []
