services/foundry-vtt/base/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: foundry-vtt-access
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Requests from ingress controller
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            # kustomize labels with includeSelectors overwrites matchLabels, use matchExpressions
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values: [traefik]
              - key: app.kubernetes.io/instance
                operator: In
                values: [traefik]
      ports:
        - protocol: TCP
          port: web

  egress:
    # Allow DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            # kustomize labels with includeSelectors overwrites matchLabels, use matchExpressions
            matchExpressions:
              - key: app.kubernetes.io/instance
                operator: In
                values: [coredns]
              - key: app.kubernetes.io/name
                operator: In
                values: [coredns]
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    # Allow egress to internet but not in cluster
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
            - 10.0.0.0/8
            - 192.168.0.0/16
            - 172.16.0.0/12
      ports:
        - protocol: TCP
          port: 443
